<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/bg"
    tools:context=".Register">

    <EditText
        android:id="@+id/usernameR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4pt"
        android:layout_marginTop="10pt"
        android:layout_marginRight="4pt"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/passwordR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10pt"
        android:layout_marginLeft="4pt"
        android:layout_marginRight="4pt"
        android:hint="@string/password"/>


    <CheckBox android:id="@+id/checkbox_isMerchant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10pt"
        android:layout_marginLeft="4pt"
        android:layout_marginRight="4pt"
        android:checked="false"
        android:text="@string/i_am_a_merchant"/>


    <Button
        android:id="@+id/btn_register_acc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="4pt"
        android:layout_marginLeft="4pt"
        android:layout_marginTop="10pt"
        android:text="@string/register"/>


</LinearLayout>