...



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/buttons"
        android:layout_below="@id/banner"
        android:id="@+id/map_view">

        <androidx.fragment.app.FragmentContainerView xmlns:map="http://schemas.android.com/apk/res-auto"
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
...
        android:layout_height="50dp"
        android:id="@+id/buttons"
        android:layout_alignParentBottom="true"
        android:gravity="center">

        <Button
            android:id="@+id/button_map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="LOG OUT" />

        <Button
            android:id="@+id/button_order_history"
...
